Fix cards images stretching

--- a/styles.css
+++ b/styles.css
@@ -310,7 +310,7 @@ a{
     width: calc(var(--cardWidth) / 100 * 75);
     height: calc(var(--cardWidth) / 100 * 75);
     border-radius: 50%;
-    background-size: cover;
+    background-size: contain;
     border-top: 5px;
     margin-top:15px;
     z-index: 5;
